# cpp-compressor

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  LZW.cpp  LZW.h  main.cpp  main.h
test/: CMakeLists.txt  LZWTest.cpp
